--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: backstage-demo
-  description: An example of a Backstage application.
+  name: IamRitwik/Backstage
+  description: Backstage in K8s.
   # Example for optional annotations
   # annotations:
   #   github.com/project-slug: backstage/backstage
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: website
-  owner: john@example.com
+  owner: ritwik@github.com
   lifecycle: experimental
