--- a/k8s/backstage-resources/bs-secret.yaml
+++ b/k8s/backstage-resources/bs-secret.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: backstage
 type: Opaque
 data:
-  GITHUB_TOKEN: Z2hwX2x4cWoxWnlXTzhaRVNObmVLMHF4WVRWT3RZbkpLSDBoVUJ5Vw==
+  GITHUB_TOKEN: ${GITHUB_TOKEN}
